Actually fix button text align center on iOS Safari
Forgot to add button wrapper around padding in the media query

--- a/style.css
+++ b/style.css
@@ -73,5 +73,7 @@ h2 {
 }
 
 @supports (-webkit-touch-callout: none) {
-  padding: 0;
+  button {
+    padding: 0;
+  }
 }
